# PK-Karaoke

./: .clangd  .gitignore  CMakeLists.txt  README.md  build_log.txt  cmake_err.txt  cmake_help.txt  configure.bat
Source/: AudioGraphManager.cpp  AudioGraphManager.h  DatabaseManager.cpp  DatabaseManager.h  KaraokeEngine.cpp  KaraokeEngine.h  LibraryScanner.cpp  LibraryScanner.h  LookAndFeel_PK.h  LyricsView.cpp  LyricsView.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiHelper.cpp  MidiHelper.h  MidiPlayer.cpp  MidiPlayer.h  MixerComponent.cpp  MixerComponent.h  MixerController.cpp  MixerController.h  NcnParser.cpp  NcnParser.h  QueueComponent.h  QueueManager.cpp  QueueManager.h  SongListView.cpp  SongListView.h  SoundFontSynth.cpp  SoundFontSynth.h  SynthMixerWindow.h  YouTubePlayerComponent.cpp  YouTubePlayerComponent.h  YouTubeService.cpp  YouTubeService.h
Source/Audio/: AudioGraphManager.cpp  AudioGraphManager.h  SoundFontSynth.cpp  SoundFontSynth.h  tsf.h
Source/Core/: KaraokeEngine.cpp  KaraokeEngine.h  MidiHelper.cpp  MidiHelper.h  MidiPlayer.cpp  MidiPlayer.h  NcnParser.cpp  NcnParser.h  QueueManager.cpp  QueueManager.h
Source/Core/Instruments/: IInstrumentSource.h  SF2Source.cpp  SF2Source.h
Source/Core/Plugins/: PluginHost.cpp  PluginHost.h
Source/Core/Routing/: MixerController.cpp  MixerController.h
Source/Database/: DatabaseManager.cpp  DatabaseManager.h  LibraryScanner.cpp  LibraryScanner.h  sqlite3.h
Source/Services/: MixerController.cpp  MixerController.h  YouTubeService.cpp  YouTubeService.h
Source/UI/: BottomBarComponent.cpp  BottomBarComponent.h  CubaseMeterComponent.h  InstrumentSettingsWindow.cpp  InstrumentSettingsWindow.h  LookAndFeel_PK.h  LookAndFeel_PK_Mixer.h  LyricsView.cpp  LyricsView.h  MainComponent.cpp  MainComponent.h  MixerComponent.cpp  MixerComponent.h  QueueComponent.h  SettingsComponent.cpp  SettingsComponent.h  SongListView.cpp  SongListView.h  SplashComponent.cpp  SplashComponent.h  SynthMixerWindow.h  VUMeterComponent.h  VstScannerComponent.cpp  VstScannerComponent.h  YouTubePlayerComponent.cpp  YouTubePlayerComponent.h
